--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,9 @@ jobs:
   deploy:
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    # already done by 
+      # - name: Checkout Repository
+      #   uses: actions/checkout@v3
 
       - name: Setup KubeConfig
         uses: azure/k8s-set-context@v3
@@ -22,11 +23,13 @@ jobs:
         run: |
           echo Layer Unittest
 
-      - name: Layer Build
-        run: |
-          echo Layer Build
-        # docker build . --tag ${{ secrets.IMAGE_TAG }}
-        # docker push ${{ secrets.IMAGE_TAG }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v5.1.0
+        with:
+          push: false
 
       - name: Layer Security
         run: |
