--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,8 @@ jobs:
   deploy:
     runs-on: ubuntu-22.04
     steps:
-    # already done by 
-      # - name: Checkout Repository
-      #   uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
       - name: Setup KubeConfig
         uses: azure/k8s-set-context@v3
