--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v5.1.0
         with:
           push: false
-          tags: {{ vars.IMAGE_TAG }}
+          tags: ${{ vars.IMAGE_TAG }}
 
   Security:
     needs: Build
